--- a/Home page/CSS/styles-home page.css
+++ b/Home page/CSS/styles-home page.css
@@ -95,7 +95,7 @@ h3 {
   bottom: 0;
   left: 0;
   z-index: 0;
-  
+  margin-top: 20px;
   /* non-critical appearance styles */
   list-style: none;
   background: #000000;
@@ -150,7 +150,7 @@ h3 {
 label[for="nav-trigger"] {
   /* critical positioning styles */
   position: fixed;
-  left: 15px; top: 15px;
+  left: 15px; top: 20px;
   z-index: 2;
   
   /* non-critical apperance styles */
